manifests/dev/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idpflow-ingress
  namespace: idpflow
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - idpflow.4.224.148.136.nip.io
      secretName: idpflow-tls
  rules:
    - host: idpflow.4.224.148.136.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 7860
          - path: /model
            pathType: Prefix
            backend:
              service:
                name: model-service-svc
                port:
                  number: 8001
